Fixed bug that caused horizontal scrolling from the universal viewer

--- a/asset/sass/_desktop.scss
+++ b/asset/sass/_desktop.scss
@@ -396,8 +396,8 @@ header nav {
     width:50%
 }
 
-.item .container-lg {
-    max-width: none;
+.item > .container-lg {
+    max-width: 1800px;
 }
 
 .universal-viewer {
